Vertex Parenting parents to the wrong vertex #59332

Closed
opened 2018-12-13 21:03:44 +01:00 by green giant · 5 comments

System Information
Operating system: Windows 10
Graphics card: Gtx 1070

Blender Version
Broken: 2.80 beta Date: 2018-12-07 13:17
Worked: (optional) 2.79b

Short description of error
Parenting an object to a vertex doesnt respect the selected vertex. I am guessing it just uses the first vertex in the list

Exact steps for others to reproduce the error

  • From default scene select the cube and go into edit mode
  • Select one of the vertices from the lower side
  • Go back to object mode
  • Add an Icosphere
  • Shift select Cube
  • Parent the sphere to the cube vertex by pressing -p and select: Vertex
  • Note the sphere moved to the top right vertex NOT the selected one
  • Select the Cube and go into edit mode
  • Note that moving the selected vertex does not move the sphere
  • Note that moving the top right vertex does move the sphere
**System Information** Operating system: Windows 10 Graphics card: Gtx 1070 **Blender Version** Broken: 2.80 beta Date: 2018-12-07 13:17 Worked: (optional) 2.79b **Short description of error** Parenting an object to a vertex doesnt respect the selected vertex. I am guessing it just uses the first vertex in the list **Exact steps for others to reproduce the error** - From default scene select the cube and go into edit mode - Select one of the vertices from the lower side - Go back to object mode - Add an Icosphere - Shift select Cube - Parent the sphere to the cube vertex by pressing <ctrl>-p and select: Vertex - Note the sphere moved to the top right vertex NOT the selected one - Select the Cube and go into edit mode - Note that moving the selected vertex does not move the sphere - Note that moving the top right vertex does move the sphere
Author

Added subscriber: @greengiant83

Added subscriber: @greengiant83
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2018-12-14 09:30:42 +01:00
Member

Confirmed, checking...

Confirmed, checking...
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Actually, if you do this in objectmode, then selection is not really taken into account here.

  • relevant operator is OBJECT_OT_parent_set (as opposed to OBJECT_OT_vertex_parent_set if you did that in editmode)
  • actually uses a kdtree to find the nearest vert (it is not based on selected verts!)
  • finds the nearest vert OK
  • BUT: the relationship line is drawn wrong (always uses origin atm. -- fix for that is D4076)
  • AND: object shifts location when doing that (but that is a different issue also reported in #59352)

So behavior is actually correct and was the same in 2.79 -- also see [the manual ], except for the wrong drawing of relationship lines, and the offset [which will be tackled in #59352]

So will close this as "Resolved" and continue looking into #59352...

Actually, if you do this in objectmode, then selection is not really taken into account here. - relevant operator is `OBJECT_OT_parent_set` (as opposed to `OBJECT_OT_vertex_parent_set` if you did that in editmode) - actually uses a kdtree to find the **nearest** vert (it is not based on **selected** verts!) - finds the nearest vert OK - BUT: the relationship line is drawn wrong (always uses origin atm. -- fix for that is [D4076](https://archive.blender.org/developer/D4076)) - AND: object shifts location when doing that (but that is a different issue also reported in #59352) So behavior is actually correct [and was the same in 2.79 -- also see [the manual ]](https://docs.blender.org/manual/en/dev/editors/3dview/object/properties/relations/parents.html#vertex-parent), except for the wrong drawing of relationship lines, and the offset [which will be tackled in #59352] So will close this as "Resolved" and continue looking into #59352...
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59332
No description provided.